welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:25: error: ':' expected but ')' found.
def reproduireMotif (T:Array, v) {
                               ^Array2:37: error: identifier expected but '}' found.
}
^